# small-doo

./: CMakeLists.txt  LICENSE  README.md  camera.hpp  d3d.hpp  lines.hpp  main.cpp  renderer.hpp  shader_CreateLists_LowRes.hlsl  shader_MinGather_LowRes.hlsl  shader_SortFragments_LowRes.hlsl
cmake/: FindDirectX.cmake
